# Blog

./: README.md  pyproject.toml
blog/blog/: settings.py  urls.py
blog/posts/: admin.py  models.py  urls.py  views.py
blog/posts/migrations/: 0001_initial.py
blog/posts/static/css/: style.css
blog/posts/templates/: base.html  index.html  post_detail.html  sidebar.html
blog/templates/: base.html  index.html  sidebar.html
blog/users/: models.py  urls.py  views.py
blog/users/migrations/: 0001_initial.py
blog/users/templates/: login.html  profile.html  register.html
