[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Веб-приложение на Django"
authors = ["ds.eruslanov <ds.eruslanov@tensor.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2 = "^2.9.9"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
